crates/swc_ecma_parser/tests/test262-error-references/fail/02c40a1caad5961a.js.stderr
error: Unterminated regexp literal
 --> $DIR/tests/test262-parser/fail/02c40a1caad5961a.js:1:1
  |
1 | /42
  | ^^^

